# bookstore_backend

./: .dockerignore  Dockerfile  LICENSE  README.md  alembic.ini  create_superuser.py  docker-compose.yml  pyproject.toml
.github/workflows/: build_and_tests.yml
entrypoints/: entrypoint.sh  entrypoint_tests.sh
migrations/: env.py
migrations/versions/: 2023_09_18_1827-349f5bcb838d_initial.py  2023_09_18_1911-e449a1f59643_mig17.py  2023_09_21_1530-ad983c2da132_initial.py  2023_09_21_1727-b6156111064f_initial.py  2023_09_26_1317-efc5ecd0741d_initial.py  2033f21a884e_initial.py  9be1852bec8f_database_creation.py  9ed736537066_initial.py
project/: config.py  db_settings.py  email.py  env_config.py  env_variables.py  main.py
project/accounts/: admin.py  auth.py  backends.py  manager.py  models.py  permissions.py  routers.py  schemas.py  utils.py
tests/: conftest.py  test_common.py
tests/tests_accounts/: api_cls.py  conftest.py  test_1_create.py  test_2_login.py  test_3_read.py  test_4_update.py  test_5_verify.py
tests/tests_accounts/utils/: api_cls.py  schemas.py
