[tool.poetry]
name = "bookstore-backend"
version = "0.1.0"
description = ""
authors = ["Artyom Vorozhbyanov <artyom.vorozhbyanov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic-settings = "^2.0.3"
sqlalchemy = "^2.0.20"
alembic = "^1.12.0"
fastapi = "^0.103.1"
uvicorn = "^0.23.2"
pydantic = "^2.3.0"
fastapi-users = {extras = ["oauth", "sqlalchemy"], version = "^12.1.2"}
asyncpg = "^0.28.0"
shortuuid = "^1.0.11"
fastapi-mail = "^1.4.1"
fastapi-pagination = {extras = ["sqlalchemy"], version = "^0.12.9"}
pytest = "^7.4.2"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
addopts = "-W ignore::DeprecationWarning"
pythonpath = [
  ".", "project",
]
