[tool.poetry]
name = "bookstore-backend"
version = "0.1.0"
description = ""
authors = ["Artyom Vorozhbyanov <artyom.vorozhbyanov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic-settings = "^2.0.3"
sqlalchemy = "^2.0.20"
alembic = "^1.12.0"
fastapi = "^0.103.1"
uvicorn = "^0.23.2"
pydantic = "^2.3.0"
fastapi-users = {extras = ["oauth", "sqlalchemy"], version = "^12.1.2"}
asyncpg = "^0.28.0"
shortuuid = "^1.0.11"
fastapi-mail = "^1.4.1"
fastapi-pagination = {extras = ["sqlalchemy"], version = "^0.12.9"}
requests = "^2.31.0"
sqladmin = "^0.15.0"

[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
flake8 = "^6.1.0"
flake8-bandit = "^4.1.1"
flake8-black = "^0.3.6"
flake8-builtins = "^2.1.0"
flake8-comprehensions = "^3.14.0"
flake8-debugger = "^4.1.2"
flake8-executable = "^2.1.3"
flake8-expression-complexity = "^0.0.11"
flake8-fixme = "^1.1.1"
flake8-multiline-containers = "^0.0.19"
flake8-mutable = "^1.2.0"
flake8-print = "^5.0.0"
flake8-quotes = "^3.3.2"
flake8-simplify = "^0.21.0"
flake8-import-order = "^0.18.2"
pytest = "^7.4.2"

[tool.black]
line-length = 120
target-version = ["py311"]
include = '^.+\.pyi?$'
extend-exclude = '''
(
    .*\.local.*
    | .*\.idea.*
    | .*\.vscode.*
    | .*\.git.*
)
'''

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
addopts = "-W ignore::DeprecationWarning"
pythonpath = [
  ".", "project",
]
